--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
 	</head>
 	<body ng-controller="MainController as vm">
 
-		<todo-list todos="vm.todos" submit="vm.addTodo(desc)"></todo-list>
+		<todo-list todos="vm.todos" submit="vm.addTodo(desc)" check="vm.checkTask(todo)" attach="vm.addAttachment()"></todo-list>
 
 		<!-- Load app -->
 		<script src="/assets/js/app.js"></script>
