made list responsive

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,12 +4,11 @@ body div.container {
 }
 
 body div.container md-whiteframe {
-	width: 500px;
 	background-color: #fff; 
 }
 
 body div.container md-whiteframe md-content{
-	width: 500px;
+	width: 100%;
 }
 
 body div.container md-whiteframe md-content{
@@ -18,4 +17,16 @@ body div.container md-whiteframe md-content{
 
 button.md-raised.md-primary.md-button.md-ink-ripple {
 	color: rgba(255,255,255,0.87);
+}
+
+@media screen and (min-width: 600px) {
+    body div.container md-whiteframe {
+    	width: 500px;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    body div.container md-whiteframe {
+    	width: 100%;
+    }
 }
