--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,7 @@
 <html ng-app="NodeTodo">
 	<head>
 		<title>Node Todo: Angular Edition</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		<!-- Angular Material Stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/deps/angular-material/angular-material.min.css">
