--- a/public/templates/signIn.html
+++ b/public/templates/signIn.html
@@ -1,14 +1,23 @@
 <md-dialog aria-label="sign in">
-	<form ng-submit="dialog.signIn()">
+	<form ng-submit="dialog.signIn(dialog.signInForm.$valid)" name="dialog.signInForm">
 		<md-dialog-content class="md-padding" layout="column">
 			<h2>Sign In</h2>
+			<div ng-messages="dialog.messages" class="md-input-message-animation" role="alert">
+				<div ng-message="incorrectPassword"><md-subheader class="md-warn">Incorrect username/password.</md-subheader></div>
+			</div>
 			<md-input-container>
 				<label>Username</label>
-				<input type="text" ng-model="dialog.uname">
+				<input type="text" required ng-model="dialog.uname" name="username">
+				<div ng-messages="dialog.signInForm.username.$error" role="alert">
+					<div ng-message="required">Required.</div>
+				</div>
 			</md-input-container>
 			<md-input-container>
 				<label>Password</label>
-				<input type="password" ng-model="dialog.pwd">
+				<input type="password" required ng-model="dialog.pwd" name="password">
+				<div ng-messages="dialog.signInForm.password.$error" role="alert">
+					<div ng-message="required">Required.</div>
+				</div>
 			</md-input-container>
 		</md-dialog-content>
 		<md-dialog-actions layout="row">
