--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,6 +15,7 @@
 		<!-- AngularJS + packages -->
 		<script src="/deps/angular/angular.min.js"></script>
 		<script src="/deps/angular-aria/angular-aria.min.js"></script>
+		<script src="/deps/angular-messages/angular-messages.min.js"></script>
 		<script src="/deps/angular-animate/angular-animate.min.js"></script>
 		<script src="/deps/angular-material/angular-material.min.js"></script>
 		<script src="/deps/angular-resource/angular-resource.min.js"></script>
